Fixing delete button, improving notifications, fixing z-index of notifications.

--- a/resources/assets/scss/components/_alert.scss
+++ b/resources/assets/scss/components/_alert.scss
@@ -36,4 +36,8 @@
   button.close {
     display: none;
   }
+
+  &.alert-overlay {
+    z-index: 15000;
+  }
 }
