--- a/resources/assets/scss/components/_button.scss
+++ b/resources/assets/scss/components/_button.scss
@@ -74,3 +74,29 @@ a.btn, button.btn {
     margin-top: 0;
   }
 }
+
+.action-buttons {
+  &:before, &:after {
+    clear: both;
+    content: "";
+    display: block;
+  }
+
+  &.left {
+    text-align: left;
+  }
+
+  &.center, &.centre {
+    text-align: center;
+  }
+
+  &.right {
+    text-align: right;
+  }
+
+  &.btn {
+    text-align: left;
+    margin-left: 7px;
+    margin-right: 7px;
+  }
+}
